Make ImagePipe brushes to initialize internal indexes on the start of every stroke

The main difference with the previous behavior is that now
the imagepipe brush does not "continue" from the previous stroke,
but instead initialized on every tablet press

BUG:361923
Fixes T2316